	        bloch_sphere        => utils/plot_bloch_sphere,
	        adiabatic_evolution => utils/plot_adiabatic_evolution,
	        wigner_function     => utils/plot_pcolor
	      * renamed ho/ladder => utils/boson_ladder
	      * renamed gates: mod_add => mod_inc
	      + gate/mod_add
	      * gates: mod_inc, mod_mul input syntax
	      * examples: teleportation and superdense_coding now can use qudits
	      * restored Matlab 7.6 compatibility

2011-01-31    Version 0.9.9 (beta)
	      + lmap class for multilinear maps, used as a base class for state
	      + lmap/mpower
	      - several methods from state moved to lmap
	      * state/concurrence fixed
	      * state/purity does not normalize the state first
	      * gates: qubits-as-a-default syntax removed as dangerous
	      * gates: now return lmaps
	      * gate/two: any dimensions, non-sequential targets OK
	      * gate/controlled: any dimensions OK
	      + gate/swap: swaps two subsystems
	      * gate/phase: does not assume the first phase is always zero
	      + examples/qft_circuit
	      + more testing scripts

2011-11-??    Version 0.9.10 (beta)
	      * performance-improving changes from MATLAB profiler
              * better code modularization
	      + some new physical constants, updated to CODATA 2010 values
              + utils/rand_SL
	      + utils/plot_state_trajectory
	      + utils/plot_2q_corr
              + lmap/trace
              b lmap/reorder now interprets permutations more consistently
	      b several small bugs fixed in state/propagate
	      b function names now match file names
	      b lmap/display can now handle sparse lmaps as well
	      * utils/tensorbasis now includes identity in the basis,
	        state/bloch_vector and utils/bloch_state correspondingly
	        changed to use the full correlation tensor
	      * Control sequences package implemented in a more general way
	        to match with the Dynamo optimal control package.